SSCS-10662 - Address comments